<resources>
    <string name="app_name">DicodingEvent</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_completed">Completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="daftar_gratis">Daftar Gratis</string>
    <string name="cover_media_event">Cover Media Event</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="add_to_favorite">Tambah Ke Favorit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorited">Favorited</string>
    <string name="organized_by">Organized by: %1$s</string>
    <string name="location">Location: %1$s</string>
    <string name="start_time">Start Time: %1$s</string>
    <string name="end_time">End Time: %1$s</string>
    <string name="slots_available">%1$d slots available</string>
    <string name="settings">Settings</string>
    <string name="favorite_event">Favorite Event</string>
    <string name="recommendation_event_for_you">Recommendation event for you!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_notification">Enable notification</string>
</resources>